# dates-calc

./: Makefile  README.md  dates_calc.opam  dune-project  index.html
.github/workflows/: workflow.yml
dates_calc/: index.html
dates_calc/Dates_calc/: index.html
dates_calc/Dates_calc/Dates/: index.html
lib/: dates.c  dates.h  dates.ml  dates.mli  dates.py  dune
lib_c/: dates_calc.c  dates_calc.h  dune
lib_python/src/dates_calc/: dates.py
proof/: dates.fst  properties.txt
test/: TODO.txt  dune  prop.ml  unit.ml  unit.py
